clock base number alignment corrected

--- a/class 21/ankur bhaiya/style.scss
+++ b/class 21/ankur bhaiya/style.scss
@@ -33,39 +33,88 @@ main{
         }
         #num1{
             transform: rotate(30deg);  // roated 30 deg and by default origin is center of div
+            span{
+                position: absolute;
+                transform: rotate(-30deg);
+            }
+
         }
         #num2{  
             transform: rotate(60deg);
+            span{
+                position: absolute;
+                transform: rotate(-60deg);
+            }
         }
         #num3{
             transform: rotate(90deg);
+            span{
+                position: absolute;
+                transform: rotate(-90deg);
+            }
         }
         #num4{
             transform: rotate(120deg);
+            span{
+                position: absolute;
+                transform: rotate(-120deg);
+            }
         }
         #num5{
             transform: rotate(150deg);
+            span{
+                position: absolute;
+                transform: rotate(-150deg);
+            }
         }
         #num6{
             transform: rotate(180deg);
+            span{
+                position: absolute;
+                transform: rotate(-180deg);
+            }
         }
         #num7{
             transform: rotate(210deg);
+            span{
+                position: absolute;
+                transform: rotate(-210deg);
+            }
         }
         #num8{
             transform: rotate(240deg);
+            span{
+                position: absolute;
+                transform: rotate(-240deg);
+            }
         }
         #num9{
             transform: rotate(270deg);
+            span{
+                position: absolute;
+                transform: rotate(-270deg);
+            }
         }
         #num10{
             transform: rotate(300deg);
+            span{
+                position: absolute;
+                transform: rotate(-300deg);
+            }
         }
         #num11{
             transform: rotate(330deg);
+            span{
+                position: absolute;
+                transform: rotate(-330deg);
+            }
         }
         #num12{
             transform: rotate(360deg);
+            span{
+                position: absolute;
+                transform: rotate(-360deg);
+            }
         }
 
     }
